Cycles smoke volume (camera inside volume)+ particle dupli (object/group) doesn't work #42411

Closed
opened 2014-10-27 02:11:24 +01:00 by Ronny G · 6 comments

System Information
ubuntu 14.04, 630gt

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)

Short description of error

if the camera enters the smoke domain the smoke texture doesnt work correctly with f12 - in the viewport its looks ok

top f12 render
bottom viewport render

Screenshot_from_2014-10-27_02:02:48.jpg

Exact steps for others to reproduce the error

open the blend
bake the smoke sim (alt+a)
render frame 50 (f12)

**System Information** ubuntu 14.04, 630gt **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) **Short description of error** if the camera enters the smoke domain the smoke texture doesnt work correctly with f12 - in the viewport its looks ok top f12 render bottom viewport render ![Screenshot_from_2014-10-27_02:02:48.jpg](https://archive.blender.org/developer/F119856/Screenshot_from_2014-10-27_02_02_48.jpg) **Exact steps for others to reproduce the error** open the blend bake the smoke sim (alt+a) render frame 50 (f12)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ
Author

ups forgot the blend and the hash..

2.72.1 - c8d10d1

cycles_smoke_inside_cam_bug.blend

eh - cant change the titel... inside camera = camera inside volume :)

ups forgot the blend and the hash.. 2.72.1 - c8d10d1 [cycles_smoke_inside_cam_bug.blend](https://archive.blender.org/developer/F119858/cycles_smoke_inside_cam_bug.blend) eh - cant change the titel... inside camera = camera inside volume :)
Sergey Sharybin was assigned by Bastien Montagne 2014-10-27 09:06:00 +01:00
Thomas Dinges changed title from Cycles smoke volume (inside camera)+ particle dupli (object/group) doesn't work to Cycles smoke volume (camera inside volume)+ particle dupli (object/group) doesn't work 2014-10-27 11:49:01 +01:00

This issue was referenced by 4a9b912b96

This issue was referenced by 4a9b912b968175edecd1fc374fe1903e1757b3a1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4a9b912b96.

Closed by commit 4a9b912b96.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42411
No description provided.