Fix T42411: Camera inside volume + particle dupli (object/group) doesn't work

The issue was caused by missing current object instance initialization after
object was ignored for instance push.